--- a/dayOff/templates/dayOff/index.html
+++ b/dayOff/templates/dayOff/index.html
@@ -56,7 +56,7 @@
         </tbody>
     </table>
 
-    <a href="{% url 'newDayOff' %}" class="btn btn-warning btn-sm">ยื่นคำขอลางาน</a>
+    <a href="{% url 'newDayOff' %}" class="btn btn-warning text-white">Create Day Off</a>
 </div>
 </body>
 </html>
